解决了模块化时引用了一些内部类的问题（包括第三方库引用第三方库、当前项目引入其他库）